force-app/main/default/objects/Flow_Error__c/Flow_Error__c.object-meta.xml
<CustomObject><label>Flow Error</label><pluralLabel>Flow Errors</pluralLabel><nameField><label>Error Number</label><type>AutoNumber</type><displayFormat>FE-{00000}</displayFormat></nameField><deploymentStatus>Deployed</deploymentStatus><sharingModel>Private</sharingModel><enableActivities>true</enableActivities></CustomObject>