force-app/main/default/objects/Flow_Error__c/fields/Context_Json__c.field-meta.xml
<CustomField><fullName>Context_Json__c</fullName><label>Context JSON</label><length>131072</length><type>LongTextArea</type><visibleLines>8</visibleLines></CustomField>