force-app/main/default/objects/Flow_Error__c/fields/Correlation_Id__c.field-meta.xml
<CustomField><fullName>Correlation_Id__c</fullName><label>Correlation ID</label><length>100</length><type>Text</type></CustomField>