force-app/main/default/objects/Flow_Error__c/fields/Fault_Message__c.field-meta.xml
<CustomField><fullName>Fault_Message__c</fullName><label>Fault Message</label><length>131072</length><type>LongTextArea</type><visibleLines>8</visibleLines></CustomField>