force-app/main/default/objects/Flow_Error__c/fields/Fingerprint__c.field-meta.xml
<CustomField><fullName>Fingerprint__c</fullName><label>Fingerprint</label><length>64</length><type>Text</type></CustomField>