force-app/main/default/objects/Flow_Error__c/fields/Interview_Id__c.field-meta.xml
<CustomField><fullName>Interview_Id__c</fullName><label>Interview ID</label><length>100</length><type>Text</type></CustomField>