force-app/main/default/objects/Flow_Error__c/fields/Record_Id__c.field-meta.xml
<CustomField><fullName>Record_Id__c</fullName><label>Record Id</label><length>18</length><type>Text</type></CustomField>