force-app/main/default/objects/Flow_Error__c/fields/Redaction_Applied__c.field-meta.xml
<CustomField><fullName>Redaction_Applied__c</fullName><label>Redaction Applied</label><defaultValue>true</defaultValue><type>Checkbox</type></CustomField>