force-app/main/default/objects/Flow_Error__c/fields/Retry_Count__c.field-meta.xml
<CustomField><fullName>Retry_Count__c</fullName><label>Retry Count</label><precision>18</precision><scale>0</scale><type>Number</type></CustomField>