force-app/main/default/objects/Flow_Error__c/fields/Sampled__c.field-meta.xml
<CustomField><fullName>Sampled__c</fullName><label>Sampled</label><defaultValue>true</defaultValue><type>Checkbox</type></CustomField>